[build-system]
requires = ["setuptools>=61.0", "numpy>=1.23"]
build-backend = "setuptools.build_meta"

[project]
name = "decompy"
version = "0.2.0"
authors = [{ name = "Subhrajyoty Roy", email = "subhrajyotyroy@gmail.com" }]
description = "A python package containing several robust algorithms for matrix decomposition, rank estimation and relevant analysis."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/subroy13/decompy"
"Bug Tracker" = "https://github.com/subroy13/decompy/issues"
